compiler/w_session/tests/errors/duplicate-functions.stderr
tests/errors/duplicate-functions.w:2:4: error: identifier already defined
fn main() {}
   ^^^^
